daniel_escobar/session01/exercise02/wordpress-canary-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress-canary
  namespace: exercise-02
  labels:
    app: wordpress
    type: frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
        type: frontend
        label: canary

    spec:
      containers:
      - image: bitnami/wordpress:4.9.5
        name: wordpress
        ports:
        - name: http
          containerPort: 80
        
        livenessProbe:
         tcpSocket:
           port: 80
         initialDelaySeconds: 15
         periodSeconds: 20

        readinessProbe:
         tcpSocket:
           port: 80
         initialDelaySeconds: 15
         periodSeconds: 20
