daniel_escobar/session01/exercise02/wordpress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress
  namespace: exercise-02
  labels:
    app: wordpress
    type: frontend
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: wordpress
        type: frontend
        label: stable

    spec:
      containers:
      - image: bitnami/wordpress:4.9.4
        name: wordpress
        ports:
        - name: http
          containerPort: 80
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20

        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
